Fixing spacing in itemize env and really sorting the page numbering

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -533,6 +533,7 @@ the recoil correction parameters within their estimated uncertainties. This
 leads to a $1$--$10$\% uncertainty, depending on the category and process considered.
 \subsubsection*{Background normalisation}
 \begin{itemize}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item \Ztautau : The inclusive normalisation of the embedded samples has a 3.3\% uncertainty, which is derived
 from combining the estimated normalisation uncertainty on the embedded samples themselves, and the uncertainty on the \ttbar embedded samples. In addition, an uncertainty of $5$--$6$\% for extrapolation from the inclusive selection to the category selection is applied.
 \item \Zellell: As this is a very small background after requiring two jets, the uncertainty on this estimate is derived from the statistical uncertainty on the yield estimate, which varies between $20$--$90$\%.
