--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -531,7 +531,7 @@ while retaining a large proportion of the $\Pbottom\Pbottom\phi$ signal.
 
 In summary, the two categories are defined as:
 \begin{itemize}
-\setlength{\itemsep}{-\baselineskip}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item \textbf{No b-tag}: No b-tagged jets. This category targets the $\Pg\Pg\phi$ production mode but is also sensitive to some of the $\Pbottom\Pbottom\phi$ signal.
 \item \textbf{B-tag}: At least one b-tagged jet, at most one 
 jet with $\pTm>30\,\GeV$. This second requirement, the jet veto, reduces the \ttbar background. 
@@ -1191,7 +1191,7 @@ uncertainties and evaluating the effect on process
 normalisations. The uncertainty amounts to around 2\%.
 \subsubsection*{Background normalisation uncertainties}
 \begin{itemize}
-\setlength{\itemsep}{-\baselineskip}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item \Ztautau: As the \Zmm control region is included in the simultaneous
 fit with the signal region to correct the \Ztautau normalisation,
 the Drell-Yan cross section uncertainty is not applied. In the no b-tag (b-tag) category a 3\% (5\%)
