--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -145,7 +145,7 @@ the analyses presented in later chapters the \ac{BDT}-based algorithm is used,
 with exceptions for the loose identification criteria required for vetoing electrons. 
 The variables used in this \ac{BDT} include:%FIXME full stop usage?!
 \begin{itemize}
-\setlength{\itemsep}{-\baselineskip}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item Cluster shape variables, such as $\sigma_{i\eta,i\eta}$, the energy-weighted width of the supercluster in units of $\eta$ crystals (illustrated in figure \ref{fig:ele_id_vars}a). 
 \item Track quality variables.
 \item Distances in $\eta$ and $\phi$ between the supercluster and the associated track.
@@ -234,7 +234,7 @@ backgrounds can be reduced by applying additional identification criteria.
 For the analysis presented in chapter \ref{chap:mssm}, ``medium'' muon requirements were applied \cite{CMS-PAS-HIG-16-037}.
 These requirements include:
 \begin{itemize}
-\setlength{\itemsep}{-\baselineskip}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item Reconstruction by either the global or tracker muon reconstruction algorithms.
 \item Requirements on track quality, and compatibility between the tracker track and the muon system track.
 \item Selection on the segment compatibility, a weight between 0 and 1 which is a measure of the compatibility
@@ -738,7 +738,7 @@ by $0.05 < R_{\text{sig}} < 0.1$.
 If a candidate satisfies more than one of the hypotheses the one that maximises the \pT~is retained.
 The decay modes considered for reconstructing hadronic taus are:
 \begin{itemize}
-\setlength{\itemsep}{-\baselineskip}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item \textbf{One prong + 0 \Ppizero :} One charged particle, no strips.
 \item \textbf{One prong + 1 \Ppizero :} One charged particle and one strip with tau mass requirement $ 0.3 < m_{\Pgt} < 1.3 \sqrt{p_{\text{T}}/100}\,\GeV$, with this
 upper limit on the mass at least $1.3\,\GeV$ and at most $4.2\,\GeV$.
@@ -777,7 +777,7 @@ can be made.
 An MVA \Pgth isolation discriminator combines isolation variables with tau lifetime information into a \ac{BDT} to discriminate between \Pgth decays and quark and gluon jets.
 Some of the variables used as input are:
 \begin{itemize}
-\setlength{\itemsep}{-\baselineskip}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item Isolation sums, including those in equations \ref{eqn:cutbased_iso} and \ref{eqn:ptouter_iso}.
 \item Track-related variables such as impact parameters, quality of the track, and information about decay vertices.
 \item Information about photons: the momentum weighted $\Delta R$, $\Delta \eta$ and $\Delta \phi$ of photons in strips inside or outside the signal cone, in addition to the number of signal and isolation photons found.
@@ -807,7 +807,7 @@ In order to reduce the $\Pe\rightarrow\Pgth$ and $\Pgm\rightarrow\Pgth$ fake rat
 anti-electron and anti-muon discriminators are used. 
 The anti-electron discriminator is a \ac{BDT}-based discriminator trained using input variables such as:
 \begin{itemize}
-\setlength{\itemsep}{-\baselineskip}
+\setlength{\itemsep}{-0.5\baselineskip}
 \item Kinematic variables of the \Pgth candidate and \ac{GSF} track, including visible mass of the \Pgth.
 \item Energy and momentum ratios such as the fraction of electromagnetic energy, \ac{ECAL} and \ac{HCAL} energy relative to track momentum.
 \item Photon-related variables, such as the momentum-weighted $\Delta \eta$ and $\Delta \phi$ between photons, the fraction of the \Pgth energy carried by photons, and the number of photons found in strips.
